[package]
name = "rubbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-crypt = "3.1.12"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = "1"
chrono = "0.4"
serde = "1"